--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -30,6 +30,7 @@ services:
       - 6881:6881 # qBitTorrent
       - 6881:6881/udp # qBitTorrent
       - 7878:7878 # Radarr
+      - 8989:8989 # Sonarr
     environment:
       - VPN_SERVICE_PROVIDER=nordvpn
       - VPN_TYPE=wireguard
@@ -65,10 +66,23 @@ services:
       - ./data:/data
     depends_on:
       - gluetun
-
+  sonarr:
+    image: linuxserver/sonarr
+    container_name: sonarr
+    restart: unless-stopped
+    network_mode: 'service:gluetun'
+    environment:
+      - PUID=0
+      - PGID=0
+      - TZ=$TZ
+    volumes:
+      - ./sonarr/config:/config
+      - ./data:/data
+    depends_on:
+      - gluetun
 
 # TODO: OTHER SERVICES FOR REQUESTING AND DOWNLOADING MEDIA
 networks:
   media:
-    name: media-network
-    external: true
+    external:
+      name: media-network
